<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/navigation_itemize_app"
    app:startDestination="@id/receiptHistoryFragment">

    <fragment
        android:id="@+id/receiptHistoryFragment"
        android:name="com.example.nabrea.itemizeapp.screens.receipthistory.ReceiptHistoryFragment"
        android:label="@string/itm_receiptHistory_title"
        tools:layout="@layout/fragment_receipt_history">
        <action
            android:id="@+id/action_receiptHistoryFragment_to_receiptFragment"
            app:destination="@id/receiptFragment"
            app:enterAnim="@anim/anim_slide_in_up"
            app:exitAnim="@anim/anim_slide_out_up"
            app:popEnterAnim="@anim/anim_slide_in_down"
            app:popExitAnim="@anim/anim_slide_out_down"
            app:popUpTo="@id/receiptHistoryFragment"
            app:popUpToInclusive="true" />
    </fragment>
    <fragment
        android:id="@+id/receiptFragment"
        android:name="com.example.nabrea.itemizeapp.screens.receipt.ReceiptFragment"
        android:label="@string/itm_receipt_title"
        tools:layout="@layout/fragment_receipt">
        <action
            android:id="@+id/action_receiptFragment_to_receiptSummaryFragment"
            app:destination="@id/finalizeFragment"
            app:enterAnim="@anim/anim_slide_in_up"
            app:exitAnim="@anim/anim_slide_out_up"
            app:popEnterAnim="@anim/anim_slide_in_down"
            app:popExitAnim="@anim/anim_slide_out_down"
            app:popUpTo="@id/receiptFragment"
            app:popUpToInclusive="false" />
    </fragment>
    <fragment
        android:id="@+id/finalizeFragment"
        android:name="com.example.nabrea.itemizeapp.screens.finalize.FinalizeFragment"
        android:label="@string/itm_receiptSummary_title"
        tools:layout="@layout/fragment_finalize"/>
</navigation>