<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:bind="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".screens.receipt.expense.UpdateExpenseDialogFragment">

    <data>
        <variable
            name="itemizeViewModel"
            type="com.example.nabrea.itemizeapp.activity.ItemizeViewModel"
            />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/updateExpenseDescription"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_marginTop="@dimen/itm_margin_topBottom_min"
            android:layout_marginStart="@dimen/itm_margin_startEnd_min"
            android:layout_marginEnd="@dimen/itm_margin_startEnd_min"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:errorEnabled="true"
            app:errorIconDrawable="@drawable/ic_baseline_error_24"
            app:errorContentDescription="@string/itm_error_expense_description">

            <!--TODO set all caps-->
            <com.google.android.material.textfield.TextInputEditText
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:id="@+id/updateExpenseDescriptionEdit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/quicksand_medium"
                android:hint="@string/itm_expense_name_hint"
                android:textAllCaps="true"
                android:textSize="@dimen/itm_text_size_small"
                android:textStyle="bold"
                android:inputType="text"
                android:text="@={itemizeViewModel._description}"
                android:maxLength="20"
                android:maxLines="1"/>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/updateExpenseCost"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Cost"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/itm_margin_startEnd_min"
            android:layout_marginTop="@dimen/itm_margin_topBottom_min"
            android:layout_marginEnd="@dimen/itm_margin_startEnd_min"
            app:layout_constraintEnd_toStartOf="@+id/updateExpenseQuantity"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/updateExpenseDescription"
            app:errorEnabled="true"
            app:errorIconDrawable="@drawable/ic_baseline_error_24"
            app:errorContentDescription="@string/itm_error_expense_cost">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/updateExpenseCostEdit"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/quicksand_medium"
                android:hint="@string/itm_expense_cost_hint"
                android:inputType="numberDecimal"
                android:textSize="@dimen/itm_text_size_small"
                android:textStyle="bold"
                android:text="@={itemizeViewModel._costText}"
                android:maxLength="10"
                android:maxLines="1"/>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/updateExpenseQuantity"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/itm_margin_topBottom_min"
            android:layout_marginStart="@dimen/itm_margin_startEnd_min"
            android:layout_marginEnd="@dimen/itm_margin_startEnd_min"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/updateExpenseCost"
            app:layout_constraintTop_toBottomOf="@+id/updateExpenseDescription"
            app:errorEnabled="true"
            app:errorIconDrawable="@drawable/ic_baseline_error_24"
            app:errorContentDescription="@string/itm_error_expense_quantity">

            <com.google.android.material.textfield.TextInputEditText
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:id="@+id/updateExpenseQuantityEdit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/quicksand_medium"
                android:hint="@string/itm_expense_qty_hint"
                android:textAllCaps="true"
                android:textSize="@dimen/itm_text_size_small"
                android:textStyle="bold"
                android:inputType="number"
                android:text="@={itemizeViewModel._quantityText}"
                android:maxLength="3"
                android:maxLines="1"
                />
        </com.google.android.material.textfield.TextInputLayout>

        <androidx.coordinatorlayout.widget.CoordinatorLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/updateExpenseCost">

            <com.google.android.material.bottomappbar.BottomAppBar
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:menu="@menu/update_expense_dialog_actions"/>
        </androidx.coordinatorlayout.widget.CoordinatorLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>